some endpoints and resolvers for batched fields, api change