@@ -2,27 +2,39 @@ package net.kravuar.schedule.web;
 
 import lombok.RequiredArgsConstructor;
 import net.kravuar.schedule.domain.commands.RetrieveScheduleByServiceCommand;
+import net.kravuar.schedule.domain.commands.RetrieveScheduleByServicesCommand;
 import net.kravuar.schedule.domain.commands.RetrieveScheduleByStaffAndServiceCommand;
 import net.kravuar.schedule.domain.commands.RetrieveScheduleExceptionDaysByStaffAndServiceCommand;
 import net.kravuar.schedule.dto.*;
+import net.kravuar.schedule.model.Service;
+import net.kravuar.schedule.model.Staff;
+import net.kravuar.schedule.model.weak.ReservationSlot;
 import net.kravuar.schedule.ports.in.ScheduleRetrievalUseCase;
+import net.kravuar.schedule.ports.in.ServiceRetrievalUseCase;
+import net.kravuar.schedule.ports.in.StaffRetrievalUseCase;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.time.LocalDate;
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RestController
 @RequestMapping("/retrieval")
 @RequiredArgsConstructor
 class ScheduleRetrievalController {
     private final ScheduleRetrievalUseCase scheduleRetrievalUseCase;
+    private final ServiceRetrievalUseCase serviceRetrievalUseCase;
+    private final StaffRetrievalUseCase staffRetrievalUseCase;
     private final DTOScheduleMapper dtoScheduleMapper;
     private final DTOStaffMapper dtoStaffMapper;
+    private final DTOServiceMapper dtoServiceMapper;
     private final DTOScheduleExceptionDayMapper dtoScheduleExceptionDayMapper;
 
     @GetMapping("/by-id/{scheduleId}")
@@ -35,7 +47,7 @@ class ScheduleRetrievalController {
 
     @GetMapping("/active-by-service-and-staff/{serviceId}/{staffId}")
     @PreAuthorize("hasPermission(#serviceId, 'Schedule', 'Read')")
-    List<ScheduleDTO> byStaffAndService(@PathVariable("staffId") long staffId, @PathVariable("serviceId") long serviceId) {
+    List<ScheduleDTO> byServiceAndStaff(@PathVariable("staffId") long staffId, @PathVariable("serviceId") long serviceId) {
         return scheduleRetrievalUseCase.findActiveSchedulesByStaffAndService(staffId, serviceId).stream()
                 .map(dtoScheduleMapper::scheduleToDTO)
                 .toList();
@@ -56,52 +68,65 @@ class ScheduleRetrievalController {
                 .collect(Collectors.toList());
     }
 
+    @GetMapping("/by-services/{from}/{to}")
+    List<ReservationSlotDTO> byServices(@RequestParam("serviceIds") Set<Long> serviceIds, @PathVariable("from") LocalDate from, @PathVariable("to") LocalDate to) {
+        return scheduleRetrievalUseCase.findActiveScheduleByServicesInPerDay(new RetrieveScheduleByServicesCommand(
+                serviceIds,
+                from,
+                to
+        )).entrySet().stream().flatMap(byServiceEntry -> {
+            ServiceDTO serviceDTO = dtoServiceMapper.serviceToDTO(byServiceEntry.getKey());
+            return byServiceEntry.getValue().entrySet().stream()
+                    .flatMap(perStaffToFlat(serviceDTO));
+        }).toList();
+    }
+
     @GetMapping("/by-service/{serviceId}/{from}/{to}")
-    List<ScheduleOfStaffDTO> byService(@PathVariable("serviceId") long serviceId, @PathVariable("from") LocalDate from, @PathVariable("to") LocalDate to) {
+    List<ReservationSlotDTO> byService(@PathVariable("serviceId") long serviceId, @PathVariable("from") LocalDate from, @PathVariable("to") LocalDate to) {
+        Service service = serviceRetrievalUseCase.findActiveById(serviceId);
+        ServiceDTO serviceDTO = dtoServiceMapper.serviceToDTO(service);
+
         return scheduleRetrievalUseCase.findActiveScheduleByServiceInPerDay(new RetrieveScheduleByServiceCommand(
                 serviceId,
                 from,
                 to
-        )).entrySet().stream().map(byStaffEntry -> new ScheduleOfStaffDTO(
-                dtoStaffMapper.staffToDTO(byStaffEntry.getKey()),
-                byStaffEntry.getValue().entrySet().stream().map(entry -> new ScheduleOfDayDTO(
-                        entry.getKey(),
-                        new ArrayList<>(entry.getValue())
-                )).toList()
-        )).toList();
-    }
-
-    @GetMapping("/by-service/flat/{serviceId}/{from}/{to}")
-    List<ScheduleOfDayDTO> byServiceFlat(@PathVariable("serviceId") long serviceId, @PathVariable("from") LocalDate from, @PathVariable("to") LocalDate to) {
-        return scheduleRetrievalUseCase.findActiveScheduleByServiceInPerDay(new RetrieveScheduleByServiceCommand(
-                                serviceId,
-                                from,
-                                to
-                        )
-                ).values().stream()
-                .map(SortedMap::entrySet)
-                .flatMap(Collection::stream)
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        entry -> new TreeSet<>(entry.getValue()),
-                        (first, second) -> {first.addAll(second); return first;}
-                )).entrySet().stream()
-                .map(entry -> new ScheduleOfDayDTO(
-                        entry.getKey(),
-                        entry.getValue().stream().toList()
-                )).toList();
+        )).entrySet().stream()
+                .flatMap(perStaffToFlat(serviceDTO))
+                .toList();
     }
 
     @GetMapping("/by-service-and-staff/{serviceId}/{staffId}/{from}/{to}")
-    List<ScheduleOfDayDTO> byServiceAndStaff(@PathVariable("serviceId") long serviceId, @PathVariable("staffId") long staffId, @PathVariable("from") LocalDate from, @PathVariable("to") LocalDate to) {
+    List<ReservationSlotDTO> byServiceAndStaff(@PathVariable("serviceId") long serviceId, @PathVariable("staffId") long staffId, @PathVariable("from") LocalDate from, @PathVariable("to") LocalDate to) {
+        Service service = serviceRetrievalUseCase.findActiveById(serviceId);
+        ServiceDTO serviceDTO = dtoServiceMapper.serviceToDTO(service);
+        Staff staff = staffRetrievalUseCase.findById(staffId);
+        StaffDTO staffDTO = dtoStaffMapper.staffToDTO(staff);
+
         return scheduleRetrievalUseCase.findActiveScheduleByStaffAndServiceInPerDay(new RetrieveScheduleByStaffAndServiceCommand(
                 staffId,
                 serviceId,
                 from,
                 to
-        )).entrySet().stream().map(entry -> new ScheduleOfDayDTO(
-                entry.getKey(),
-                new ArrayList<>(entry.getValue())
-        )).collect(Collectors.toList());
+        )).entrySet().stream().flatMap(byDateEntry -> byDateEntry.getValue().stream()
+                .map(slot -> dtoScheduleMapper.slotToDTO(
+                        slot,
+                        byDateEntry.getKey(),
+                        serviceDTO,
+                        staffDTO
+                ))).toList();
+    }
+
+    private Function<Map.Entry<Staff, NavigableMap<LocalDate, SortedSet<ReservationSlot>>>, Stream<? extends ReservationSlotDTO>> perStaffToFlat(ServiceDTO serviceDTO) {
+        return byStaffEntry -> {
+            StaffDTO staffDTO = dtoStaffMapper.staffToDTO(byStaffEntry.getKey());
+            return byStaffEntry.getValue().entrySet().stream()
+                    .flatMap(byDateEntry -> byDateEntry.getValue().stream()
+                            .map(slot -> dtoScheduleMapper.slotToDTO(
+                                    slot,
+                                    byDateEntry.getKey(),
+                                    serviceDTO,
+                                    staffDTO
+                            )));
+        };
     }
 }
